--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -2,10 +2,10 @@ $container-xxl:             1260px;
 $container-xxxl:            1374px;
 $footer_text_color:         #737373;
 $footer_text_color_hover:   #bebebe;
-$body_bg_color:             #141111;
-$logo_main_color:           #F85757;
-$btn_bg_color:              #FA4F4F;
-$btn_hover_bg_color:        #D94343;
+$body_bg_color:             #ffffff;/**/
+$logo_main_color:           #FF6699;/**/
+$btn_bg_color:              #FF6699;/**/
+$btn_hover_bg_color:        #E45182;/**/
 $font_color:                #B3B3B3;
 $bg_dark_1:                 #010101;
 $font_family:               "Gilroy", sans-serif;
