--- a/src/html/includes/footer.html
+++ b/src/html/includes/footer.html
@@ -5,7 +5,7 @@
                     <div class="flex-grow-1 mr-auto-md">
                         <div class="logo logo_footer">
                             <div class="logo__img"></div>
-                            <div class="logo__text">Live&nbsp;your&nbsp;<br class="logo__text-br">wet&nbsp;dream</div>
+                            <div class="logo__text">Live&nbsp;your&nbsp;wet&nbsp;dream</div>
                         </div>
                     </div>
                     <a href="#" class="footer__link">Privacy policy</a>
