--- a/src/html/includes/header-nomenu.html
+++ b/src/html/includes/header-nomenu.html
@@ -16,13 +16,13 @@
 
 </head>
 <body>
-<header class="header header_page">
-    <div class="header__row">
-        <div class="d-flex justify-content-between align-items-center">
-            <div class="logo logo_header flex-grow-1 mr-auto">
-                <div class="logo__img"></div>
-                <div class="logo__text">Live&nbsp;your&nbsp;<br class="logo__text-br">wet&nbsp;dream</div>
+    <header class="header header_page">
+        <div class="header__row">
+            <div class="d-flex justify-content-between justify-content-md-center align-items-center">
+                <div class="logo logo_header flex-grow-1 flex-md-grow-0 mr-auto mr-md-0">
+                    <div class="logo__img"></div>
+                    <div class="logo__text">Zoomflirts</div>
+                </div>
             </div>
         </div>
-    </div>
-</header>
+    </header>
