--- a/src/html/includes/header.html
+++ b/src/html/includes/header.html
@@ -18,14 +18,14 @@
 <body>
 	<header class="header header_page">
 		<div class="header__row">
-			<div class="d-flex justify-content-between align-items-center">
-				<div class="logo logo_header flex-grow-1 mr-auto">
+			<div class="d-flex justify-content-between justify-content-md-center align-items-center">
+				<div class="logo logo_header flex-grow-1 flex-md-grow-0 mr-auto mr-md-0">
 					<div class="logo__img"></div>
-					<div class="logo__text">Live&nbsp;your&nbsp;<br class="logo__text-br">wet&nbsp;dream</div>
+					<div class="logo__text">Zoomflirts</div>
 				</div>
 				<div class="header__nav-toggle icon-menu"></div>
 				<div class="header__userinfo">
-					<a href="#" class="header__userinfo-text">Stefan<div class="notice">90</div></a>
+					<a href="#" class="header__userinfo-text"><div class="notice">100</div></a>
 				</div>
 			</div>
 		</div>
