--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -4,62 +4,47 @@
     background-color: $btn_bg_color;
     border-radius: 10px;
     color: #fff;
-    font-weight: 600;
-    font-size: 13px;
-    padding: 6px 10px;
+    font-weight: 700;
+    font-size: 12px;
+    padding: 6px 8px;
     line-height: 1;
     text-align: center;
-    @media (min-width: 768px) {
-      & {
-        font-size: 15px;
-        padding: 7px 10px;
-      }
+    &:hover {
+      background-color: $btn_hover_bg_color;
     }
-  }
-  &.expand {
-    .header__row {
-      background-color: $bg_dark_1;
-      @media (min-width: 768px) {
-        & {
-          background-color: transparent;
-        }
-      }
+    @media (min-width: 768px) {
+      font-size: 15px;
+      padding: 7px 9px;
     }
   }
 }
 .header_page {
-  margin-bottom: 68px;
+  margin-bottom: 42px;
   @media (min-width: 768px) {
-    & {
-      margin-bottom: 40px;
-    }
-  }
-  @media (min-width: 992px) {
-    & {
-      margin-bottom: 90px;
-    }
+    margin-bottom: 100px;
   }
 }
 
 .header__row {
-  padding: 27px 15px 0;
+  padding: 32px 15px 0;
   @media (min-width: 768px) {
-    & {
-      padding: 40px 40px 0 40px;
-    }
-  }
-  @media (min-width: 992px) {
-    & {
-      padding: 90px 90px 0 90px;
-    }
+    padding: 123px 15px 0;
   }
 }
 
 .header__nav-toggle {
-  color: #fff;
-  font-size: 14px;
   padding-left: 10px;
   cursor: pointer;
+  &.icon-menu::before {
+    content: '';
+    display: block;
+    width: 23px;
+    height: 15px;
+    background-image: url('../img/icons/icon-menu.svg');
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: 50%;
+  }
   &:hover {
     opacity: 0.75;
   }
@@ -71,7 +56,7 @@
 }
 .header__userinfo {
   display: none;
-  padding-left: 30px;
+  padding-left: 24px;
   max-width: 500px;
   @media (min-width: 768px) {
     & {
@@ -79,58 +64,42 @@
     }
   }
   .notice {
-    margin-left: 22px;
     position: relative;
     top: -1px;
   }
   .header__userinfo-text,
   a.header__userinfo-text {
-    font-family: "Montserrat", sans-serif;
-    font-size: 18px;
-    font-weight: 600;
+    font-family: $font_family;
+    font-size: 15px;
+    font-weight: 800;
     color: #fff;
     text-transform: uppercase;
     text-decoration: none;
-    word-break: break-all;
-    &:hover {
-      opacity: 0.75;
-    }
   }
 }
 .header-menu {
   display: none;
-  &:after {
-    content: '';
-    display: block;
-    width: 100%;
-    height: 30px;
-    background-repeat: no-repeat;
-    background-position: center bottom;
-    background-size: 100% 100%;
-    background-image: url('../img/bg/mobile/bg-menu.svg');
-  }
   @media (min-width: 768px) {
-    & {
-      display: none !important;
-    }
+    display: none !important;
   }
 }
 .header-menu__wrap {
-  padding-top: 30px;
-  background-color: $bg_dark_1;
+  padding-top: 32px;
 }
 .header-menu__item {
-  padding: 15px 15px 30px;
+  padding: 15px;
   &:hover {
-    opacity: 0.75;
     text-decoration: none;
+    .notice {
+      background-color: $btn_hover_bg_color;
+    }
   }
 }
 .header-menu__item-text {
-  font-family: "Montserrat", sans-serif;
-  font-size: 14px;
-  font-weight: 600;
-  color: #fff;
+  color: #000;
+  font-size: 11px;
+  font-weight: 900;
+  letter-spacing: 2px;
   text-transform: uppercase;
   text-decoration: none;
   word-break: break-all;
