--- a/src/scss/logo.scss
+++ b/src/scss/logo.scss
@@ -11,43 +11,31 @@
   }
 }
 .logo__img {
-  width: 45px;
-  height: 45px;
+  width: 30px;
+  height: 22px;
   background-image: url('../img/icons/logo.svg');
   background-repeat: no-repeat;
   background-position: 50% 50%;
+  background-size: 100%;
   margin-right: 0;
   @media (min-width: 768px) {
     & {
-      width: 43px;
-      height: 43px;
-      margin-right: 20px;
+      width: 62px;
+      height: 44px;
+      margin-right: 28px;
     }
   }
 }
 .logo__text {
-  font-family: "Montserrat", sans-serif;
-  font-weight: 600;
-  color: $footer_text_color;
-  font-size: 14px;
+  color: #000;
+  font-family: $font_family;
+  font-weight: 900;
+  font-size: 11px;
   text-transform: uppercase;
-  text-align: center;
+  letter-spacing: 2px;
   @media (min-width: 768px) {
-    & {
-      text-align: left;
-    }
-  }
-  @media (min-width: 768px) {
-    & {
-      font-size: 21px;
-    }
-  }
-  .logo__text-br {
-    @media (min-width: 768px) {
-      & {
-        display: none;
-      }
-    }
+    font-weight: 800;
+    font-size: 18px;
   }
 }
 .logo_main {
@@ -76,11 +64,9 @@
     }
   }
   .logo__text {
-    color: #fff;
     font-size: 15px;
     @media (min-width: 768px) {
       & {
-        color: $logo_main_color;
         font-size: 18px;
       }
     }
@@ -98,31 +84,23 @@
   //align-items: center;
   flex-direction: row;
   .logo__img {
-    width: 24px;
-    height: 24px;
+    width: 30px;
+    height: 22px;
     background-image: url('../img/icons/logo.svg');
-    margin-right: 12px;
+    margin-right: 14px;
     @media (min-width: 768px) {
       & {
-        width: 43px;
-        height: 43px;
-        margin-right: 20px;
+        width: 62px;
+        height: 44px;
+        margin-right: 28px;
         background-image: url('../img/icons/logo-black.svg');
       }
     }
   }
   .logo__text {
-    color: #fff;
-    font-size: 13px;
-    text-align: left;
+    font-size: 11px;
     @media (min-width: 768px) {
-      & {
-        font-size: 21px;
-        color: $logo_main_color;
-      }
-    }
-    .logo__text-br {
-      display: none;
+      font-size: 18px;
     }
   }
 }
@@ -149,7 +127,6 @@
     }
   }
   .logo__text {
-    color: $footer_text_color;
     font-size: 14px;
     text-align: center;
     @media (min-width: 768px) {
