--- a/src/html/views/settings.html
+++ b/src/html/views/settings.html
@@ -5,7 +5,7 @@
             <form action="">
                 <div class="row">
                     <div class="col-12 col-lg-6">
-                        <h2 class="title-mark">Settings</h2>
+                        <h2>Settings</h2>
                         <div class="settings-photo">
                             <div class="form-group form-group_40">
                                 <div class="profile-photo">
