--- a/src/html/views/unsubscribe.html
+++ b/src/html/views/unsubscribe.html
@@ -4,7 +4,7 @@
         <div class="content">
             <div class="row">
                 <div class="col-12 col-lg-6">
-                    <h2 class="title-mark">Your<br>Subscription</h2>
+                    <h2 >Your<br>Subscription</h2>
                 </div>
                 <div class="col-12 col-lg-6">
                     <form action="">
