--- a/src/html/views/user_list.html
+++ b/src/html/views/user_list.html
@@ -114,7 +114,7 @@
                 </div>
             </div>
         </div>
-        <div class="user-list-title text-md-center title-mark title-mark_center">Claim 2 of these sexy matches by<br>SigningIp and I`ll reward you with $20 gift card!</div>
+        <div class="user-list-title text-md-center">Claim 2 of these sexy matches by<br>SigningIp and I`ll reward you with $20 gift card!</div>
         <div class="user-list-extra">
             <div class="user-list-extra-item">
                 <div class="user-list-extra-item__pic">
