--- a/src/html/includes/footer.html
+++ b/src/html/includes/footer.html
@@ -1,11 +1,11 @@
     <footer class="footer">
         <div class="footer__bottom">
             <div class="container">
-                <div class="d-flex flex-column flex-md-row justify-content-center justify-content-md-between align-items-center">
+                <div class="footer__row d-flex flex-column flex-md-row justify-content-center justify-content-md-between align-items-center">
                     <div class="flex-grow-1 mr-auto-md">
                         <div class="logo logo_footer">
                             <div class="logo__img"></div>
-                            <div class="logo__text">Live&nbsp;your&nbsp;wet&nbsp;dream</div>
+                            <div class="logo__text">Zoomflirts</div>
                         </div>
                     </div>
                     <a href="#" class="footer__link">Privacy policy</a>
