--- a/src/html/views/privacy.html
+++ b/src/html/views/privacy.html
@@ -2,7 +2,7 @@
     <main class="main">
         <div class="container">
             <div class="content">
-                <h2 class="title-mark">Privacy<br>Policy</h2>
+                <h2>Privacy<br>Policy</h2>
                 <h3>1. General Information</h3>
                 <p>
                     1.1. The subject of this Privacy Policy is the use of this Service and the sites, functions and performances offered as part of the Service, regardless of the domains, systems, platforms (e.g. web or Facebook) and devices (e.g. desktop or mobile) on which the Service is carried out.
