--- a/src/scss/body.scss
+++ b/src/scss/body.scss
@@ -38,7 +38,6 @@ body {
   }
 }
 h1 {
-  font-family: "ActaDisplay", sans-serif;
   font-weight: 300;
   font-size: 34px;
   line-height: 45px;
@@ -55,7 +54,6 @@ h1 {
   }
 }
 h2 {
-  font-family: "ActaDisplay", sans-serif;
   font-weight: 300;
   font-size: 34px;
   line-height: 50px;
@@ -77,7 +75,6 @@ h2 {
   }
 }
 h3 {
-  font-family: "Montserrat", sans-serif;
   font-weight: 700;
   font-size: 18px;
   line-height: 24px;
@@ -88,25 +85,6 @@ h3 {
     & {
       font-size: 22px;
       margin-top: 95px;
-    }
-  }
-}
-.title-mark {
-  &:before {
-    content: '';
-    display: block;
-    width: 30px;
-    height: 1px;
-    border-top: 3px solid $logo_main_color;
-    margin-bottom: 20px;
-    @media (min-width: 768px) {
-      width: 60px;
-    }
-  }
-  &.title-mark_center:before {
-    @media (min-width: 768px) {
-      margin-left: auto;
-      margin-right: auto;
     }
   }
 }
@@ -222,7 +200,7 @@ a {
   position: relative;
   min-height: 100%;
   body {
-    margin-bottom: $body_mb_mob + 396px;
+    margin-bottom: $body_mb_mob + $footer_height_mob;
     .main {
       //padding-top: 60px;
     }
@@ -230,30 +208,14 @@ a {
       position: absolute;
       bottom: 0;
       width: 100%;
-      height: 396px;
-    }
-    @media (min-width: 576px) {
-      & {
-        margin-bottom: $body_mb_mob + 396px + 55px;
-      }
-      .footer {
-        height: 396px + 55px;
-      }
+      height: $footer_height_mob;
     }
     @media (min-width: 768px) {
       & {
-        margin-bottom: $body_mb + 315px;
+        margin-bottom: $body_mb + $footer_height;
       }
       .footer {
-        height: 315px;
-      }
-    }
-    @media (min-width: 1200px) {
-      & {
-        margin-bottom: $body_mb + 315px + 20px;
-      }
-      .footer {
-        height: 315px + 20px;
+        height: $footer_height;
       }
     }
   }
