--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -1,66 +1,72 @@
 .footer {
-  background-color: $body_bg_color;
-  &.footer_main {
-    background-color: #fff;
-  }
-  &:before {
-    content: '';
-    display: block;
-    width: 100%;
-    height: 102px;
-    background-image: url('../img/bg/bg-footer-mob-up.svg');
-    background-size: 100% 100%;
-    background-position: center bottom;
-    background-repeat: no-repeat;
-    position: relative;
-    bottom: -4px;
-    margin-top: 15px;
-    @media (min-width: 768px) {
-      & {
-        background-image: url('../img/bg/bg-footer-up.svg');
-        height: 132px;
-      }
-    }
-  }
+  position: relative;
+  background-color: #fff;
   a.footer__link {
-    font-family: "Montserrat", sans-serif;
-    font-weight: 600;
-    color: $footer_text_color;
-    font-size: 11px;
-    margin-top: 20px;
-    text-transform: uppercase;
+    color: #000;
+    font-size: 14px;
+    font-weight: 300;
+    margin-top: 22px;
   }
   a.footer__link:hover {
     color: $footer_text_color_hover;
     text-decoration: none;
   }
   @media (min-width: 768px) {
+    background-color: #000;
+    &::before {
+      content: '';
+      display: block;
+      position: absolute;
+      right: 68%;
+      top: 0;
+      bottom: 0;
+      height: 100%;
+      width: 100%;
+      background-color: #222222;
+      z-index: 1;
+    }
     a.footer__link {
-      font-size: 10px;
+      color: $footer_text_color;
+      font-size: 13px;
+      font-weight: 400;
       margin-top: 0;
+      text-transform: uppercase;
     }
     a.footer__link + a.footer__link {
       margin-left: 30px;
     }
   }
+  @media (min-width: 800px) {
+    &::before {
+      right: 66%;
+    }
+  }
+  @media (min-width: 930px) {
+    &::before {
+      right: 64%;
+    }
+  }
   @media (min-width: 992px) {
+    &::before {
+      right: 66%;
+    }
     a.footer__link {
-      font-size: 14px;
+      font-size: 15px;
     }
   }
   @media (min-width: 1200px) {
-    a.footer__link {
-      font-size: 16px;
+    &::before {
+      right: 63%;
     }
     a.footer__link + a.footer__link {
-      margin-left: 50px;
+      margin-left: 75px;
     }
   }
 }
 
 .footer__bottom {
-  background-color: $bg_dark_1;
-  padding: 10px 0 50px;
+  background-color: #fff;
+  padding: 28px 0 31px;
   @media (min-width: 576px) {
     & {
       padding: 50px 0 65px;
@@ -68,12 +74,18 @@
   }
   @media (min-width: 768px) {
     & {
-      padding: 60px 0 65px;
+      background-color: #000;
+      padding: 52px 0 50px;
     }
   }
   @media (min-width: 1200px) {
     & {
-      padding: 60px 0 85px;
+      padding: 52px 0 50px;
     }
   }
+}
+
+.footer__row {
+  position: relative;
+  z-index: 10;
 }
