--- a/src/scss/logo.scss
+++ b/src/scss/logo.scss
@@ -114,31 +114,32 @@
   }
   @media (min-width: 992px) {
     & {
-      margin-right: 15px;
+      margin-right: 39px;
     }
   }
   .logo__img {
-    background-image: url('../img/icons/logo-gray.svg');
-    margin-bottom: 15px;
+    width: 44px;
+    height: 33px;
+    background-image: url('../img/icons/logo.svg');
+    margin-bottom: 13px;
     @media (min-width: 768px) {
-      & {
-        margin-bottom: 0;
-      }
+      width: 47px;
+      height: 34px;
+      background-image: url('../img/icons/logo-gray.svg');
+      margin-bottom: 0;
+      margin-right: 30px;
     }
   }
   .logo__text {
-    font-size: 14px;
+    color: #000;
+    font-size: 15px;
+    font-weight: 900;
     text-align: center;
     @media (min-width: 768px) {
-      & {
-        text-align: left;
-        font-size: 15px;
-      }
-    }
-    @media (min-width: 992px) {
-      & {
-        font-size: 21px;
-      }
+      color: #A6A6A6;
+      text-align: left;
+      font-size: 14px;
+      font-weight: 600;
     }
   }
 }
