--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -1,7 +1,5 @@
 $container-xxl:             1260px;
 $container-xxxl:            1374px;
-$footer_text_color:         #737373;
-$footer_text_color_hover:   #bebebe;
 $body_bg_color:             #ffffff;/**/
 $logo_main_color:           #FF6699;/**/
 $btn_bg_color:              #FF6699;/**/
@@ -22,6 +20,10 @@ $link2_color:               #514e51;
 $link2_hover_color:         #fff;
 $link3_color:               #fff;
 $link3_hover_color:         #A7A7A7;
+$footer_height:             138px;/**/
+$footer_height_mob:         265px;/**/
+$footer_text_color:         #A6A6A6;/**/
+$footer_text_color_hover:   #737373;/**/
 
 //Form
 $input_bg:                  #3D3A3D;
