--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -1,6 +1,6 @@
 .footer {
-  position: relative;
   background-color: #fff;
+  overflow: hidden;
   a.footer__link {
     color: #000;
     font-size: 14px;
