--- a/src/html/views/login.html
+++ b/src/html/views/login.html
@@ -16,7 +16,7 @@
                     <div class="col">
                         <div class="header__form">
                             <form action="">
-                                <h2 class="text-lg-uppercase text-center text-lg-left">Enter&nbsp;your&nbsp;<br>profile</h2>
+                                <h2 class="text-center text-lg-left">Enter&nbsp;your&nbsp;<br>profile</h2>
                                 <div class="form-group form-group_20">
                                     <input class="form-control" type="text" placeholder="Email">
                                 </div>
