--- a/src/html/views/signup.html
+++ b/src/html/views/signup.html
@@ -16,7 +16,7 @@
                     <div class="col">
                         <div class="header__form">
                             <form action="">
-                                <h2 class="header-form-title text-lg-uppercase text-center text-md-left">Signup&nbsp;access<br>your&nbsp;matches</h2>
+                                <h2 class="header-form-title text-center text-md-left">Signup&nbsp;access<br>your&nbsp;matches</h2>
                                 <div class="form-group form-group_20">
                                     <input class="form-control" type="text" placeholder="Email">
                                 </div>
