--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -4,12 +4,12 @@ $body_bg_color:             #ffffff;/**/
 $logo_main_color:           #FF6699;/**/
 $btn_bg_color:              #FF6699;/**/
 $btn_hover_bg_color:        #E45182;/**/
-$font_color:                #B3B3B3;
+$font_color:                #141111;/**/
 $bg_dark_1:                 #010101;
 $font_family:               "Gilroy", sans-serif;
-$font_weight:               400;
-$font_size:                 18px;
-$font_size_mobile:          14px;
+$font_weight:               300;
+$font_size:                 20px;
+$font_size_mobile:          15px;
 $body_mb:                   150px;
 $body_mb_mob:               80px;
 $font_family2:              $font_family;
