--- a/src/html/views/anytext.html
+++ b/src/html/views/anytext.html
@@ -2,7 +2,7 @@
 <main class="main">
     <div class="container">
         <div class="content">
-            <h2>Any Text<br>Page</h2>
+            <h2>Any Text Page</h2>
             <p>We have created a unique combination system that consists of three main factors that produce similarity of thought and productive connections: Life, freedom and culture. NF, in an abbreviated form, connects people who have interests in similar activities, passions and future aspirations. We also add our own personal touch to the online dating process ensuring that your experience is special and exclusive to you.</p>
             <p>Instead of spending weeks looking for your best combination, we send you a personalized combination every day by email. Since these presentations have been carefully selected based on your NF (Life, Freedom and Culture) score, you can spend more time talking or planning your first night out.</p>
             <p>We believe in unconditional sincerity and transparency. That's why our users' profiles reflect this in every possible way. With a simple and friendly layout, our profiles clearly show all the details you need to make an informed decision.</p>
