--- a/src/scss/body.scss
+++ b/src/scss/body.scss
@@ -55,45 +55,35 @@ h1 {
 }
 h2 {
   font-weight: 300;
-  font-size: 34px;
-  line-height: 50px;
-  color: #fff;
-  text-transform: uppercase;
-  margin-bottom: 43px;
+  font-size: 45px;
+  line-height: 55px;
+  color: #131313;
+  text-align: center;
+  margin-bottom: 63px;
   @media (min-width: 768px) {
-    & {
-      font-size: 55px;
-      line-height: 80px;
-      margin-bottom: 88px;
-    }
-  }
-}
-.text-lg-uppercase {
-  text-transform: none;
-  @media (min-width: 768px) {
-    text-transform: uppercase;
+    color: #222;
+    font-size: 60px;
+    line-height: 80px;
+    margin-bottom: 72px;
   }
 }
 h3 {
   font-weight: 700;
   font-size: 18px;
   line-height: 24px;
-  color: #fff;
+  color: #000;
   margin-top: 40px;
   margin-bottom: 35px;
+  text-transform: uppercase;
   @media (min-width: 768px) {
-    & {
-      font-size: 22px;
-      margin-top: 95px;
-    }
+    font-size: 20px;
+    margin-top: 80px;
   }
 }
 p {
   line-height: 35px;
   @media (min-width: 768px) {
-    & {
-      line-height: 40px;
-    }
+    line-height: 40px;
   }
 }
 a {
