--- a/src/scss/settings.scss
+++ b/src/scss/settings.scss
@@ -1,35 +1,31 @@
-.settings-form {
-  @media (min-width: 768px) {
-    & {
-      padding-top: 25px;
-    }
-  }
-}
+.settings-form {}
 .settings-photo {
   margin: 0 auto;
-  max-width: 212px;
-  @media (min-width: 576px) {
-    & {
-      max-width: 352px;
-    }
+  @media (min-width: 321px) {
+    max-width: 290px;
+  }
+  @media (min-width: 330px) {
+    max-width: 300px;
   }
 }
 .profile-photo {
-  display: block;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   max-width: 100%;
-  height: 212px;
-  max-height: 212px;
-  border-radius: 50%;
+  height: 390px;
+  max-height: 390px;
+  border-radius: 20px;
   overflow: hidden;
-  background-color: $input_bg;
+  background-color: #D5D5D5;
+  background-repeat: no-repeat;
+  background-position: 50%;
+  background-size: cover;
   @media (min-width: 576px) {
     & {
-      height: 352px;
-      max-height: 352px;
+      height: 390px;
+      max-height: 390px;
+      max-width: 300px;
     }
   }
-}
-
-.profile-photo__img {
-  display: none;
 }
