--- a/src/html/views/settings.html
+++ b/src/html/views/settings.html
@@ -17,12 +17,6 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="form-group form-group_30 d-none d-lg-block text-center">
-                                <div class="custom-control custom-switch">
-                                    <input type="checkbox" class="custom-control-input" id="customSwitch2">
-                                    <label class="custom-control-label" for="customSwitch2">Notify me of site updates</label>
-                                </div>
-                            </div>
                         </div>
                     </div>
                     <div class="col-12 col-lg-6">
@@ -46,12 +40,22 @@
                             <div class="form-group form-group_40">
                                 <textarea class="form-control" placeholder="About"></textarea>
                             </div>
-                            <div class="form-group form-group_40 d-lg-none">
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12 col-lg-6">
+                        <div class="settings-photo">
+                            <div class="form-group form-group_40">
                                 <div class="custom-control custom-switch">
-                                    <input type="checkbox" class="custom-control-input" id="customSwitch1">
-                                    <label class="custom-control-label" for="customSwitch1">Notify me of site updates</label>
+                                    <input type="checkbox" class="custom-control-input" id="customSwitch">
+                                    <label class="custom-control-label" for="customSwitch">Notify me of site updates</label>
                                 </div>
                             </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-lg-6">
+                        <div class="settings-form">
                             <div class="form-group form-group_20">
                                 <button class="btn btn_w100">SAVE PREFERENCES</button>
                             </div>
