--- a/src/html/views/settings.html
+++ b/src/html/views/settings.html
@@ -45,7 +45,7 @@
                 </div>
                 <div class="row">
                     <div class="col-12 col-lg-6">
-                        <div class="settings-photo">
+                        <div class="settings-photo settings-switch">
                             <div class="form-group form-group_40">
                                 <div class="custom-control custom-switch">
                                     <input type="checkbox" class="custom-control-input" id="customSwitch">
