--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -93,6 +93,9 @@ $radio_bg_icon:              "data:image/svg+xml,%3Csvg xmlns='http://www.w3.org
 $switch_content_0: 'Off';
 $switch_content_1: 'On';
 $switch_content_bg: $switch_content_0 + '\00a0\00a0\00a0\00a0\00a0' + $switch_content_1;
+$switch_txt_color1: #060606;
+$switch_txt_color2: #ccc;
+$switch_txt_color3: #fff;
 $switch_distance_text: 15px;
 $switch_left_offset: 54px;
 
